# claude-cowork-service

./: .gitignore  .gitmodules  .upstream-version  CHANGELOG.md  CLAUDE.md  COWORK_RPC_PROTOCOL.md  COWORK_SVC_BINARY.md  COWORK_VM_BUNDLE.md  Makefile  PKGBUILD  README.md  UPDATE-PROMPT-CC-INPUT-MANUAL.md  claude-cowork-service.install  claude-cowork.confd  claude-cowork.openrc  claude-cowork.service  go.mod  index.html  install-rpm.sh  install.sh  main.go  update-prompt.md
.github/workflows/: build-and-release.yml  ci.yml  version-check.yml
badges/: apt-repo.json  nix.json  rpm-repo.json  version-check.json
deb/: InRelease  Packages  Release  Release.gpg
deb/amd64/: claude-cowork-service_0.3.3_amd64.deb  claude-cowork-service_1.0.0_amd64.deb  claude-cowork-service_1.0.10_amd64.deb  claude-cowork-service_1.0.11_amd64.deb  claude-cowork-service_1.0.12_amd64.deb  claude-cowork-service_1.0.13_amd64.deb  (+44 more)
logx/: logx.go
native/: backend.go  backend_test.go  diskmgmt.go  diskmgmt_test.go  process.go  process_test.go
pipe/: handlers.go  handlers_test.go  protocol.go  server.go
probe/: probe.go  probe_test.go
process/: events.go
sandbox/: backend.go  backend_test.go  config.go
scripts/: build-local.sh  extract-cowork-svc.sh  extract-vm-bundle.sh  install.sh
scripts/cowork-session-doctor/: README.md  pyproject.toml
scripts/cowork-session-doctor/src/cowork_session_doctor/: __init__.py  cli.py  core.py
vm/: backend.go  backend_test.go  bridge.go  bundle.go  helper.go  manager.go  paths.go  paths_test.go  preflight.go  qemu.go  qmp.go  uefi.go  vfs.go
(+212 files in other folders)
