[project]
name = "cowork-session-doctor"
version = "0.1.0"
description = "Diagnostic, repair, and recovery tool for Claude Desktop Cowork sessions"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Cytognosis Foundation", email = "engineering@cytognosis.org" },
]
dependencies = []

[project.scripts]
cowork-session-doctor = "cowork_session_doctor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cowork_session_doctor"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "C4", "SIM"]
ignore = ["S603", "S607"]
